--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -80,19 +80,17 @@ label {
 .navList {
   display: flex;
   justify-content: center;
+  background-color: white;
+  border-radius: 1rem;
 }
 .navList li {
   padding: 0.5rem 5rem;
   font-size: 1.2rem;
   text-transform: uppercase;
-  color: white;
+  color: #81d8d0;
   font-weight: bold;
   letter-spacing: 2px;
   cursor: pointer;
-}
-
-.navList li:hover {
-  border-bottom: 1px solid white;
 }
 
 .custom-btn {
@@ -104,4 +102,98 @@ label {
   text-transform: uppercase;
   cursor: pointer;
   border-radius: 1rem;
+}
+
+.avatar-photo {
+  border-radius: 50%;
+  width: 2rem;
+  height: 2rem;
+}
+
+.search-email {
+  display: flex;
+  justify-content: center;
+  margin: 5rem 0;
+}
+.search-email input {
+  width: 40%;
+  height: 2rem;
+  border: 1px solid #81d8d0;
+  margin: 0.5rem;
+  border-radius: 1rem;
+  letter-spacing: 2px;
+  outline: none;
+}
+
+.search-email input[placeholder] {
+  padding-left: 1rem;
+}
+
+table {
+  width: 100%;
+  text-align: center;
+  background-color: white;
+  color: #81d8d0;
+  border-radius: 1rem;
+  padding: 0.5rem;
+}
+thead {
+  background-color: #81d8d0;
+  color: white;
+  border-radius: 1rem;
+}
+thead th {
+  font-size: 1.3rem;
+  border-radius: 1rem;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(0, 0, 0, 0.6);
+  backdrop-filter: blur(2px);
+  z-index: 1;
+}
+.modal {
+  width: fit-content;
+  margin: 5% auto;
+  border-radius: 1rem;
+  padding: 2.5rem;
+  color: #81d8d0;
+  text-align: center;
+  background-color: white;
+}
+.answers {
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+}
+.answers button {
+  margin-right: 1rem;
+}
+.answers #noBtn {
+  color: white;
+  background-color: #81d8d0;
+}
+
+.exit-wrapper {
+  display: flex;
+  justify-content: end;
+}
+.exit-wrapper button {
+  color: white;
+  background-color: #81d8d0;
+}
+.image-wrapper img {
+  width: 25%;
+  border-radius: 1rem;
+}
+.data-wrapper {
+  margin: 1.5rem 0;
+}
+.data-wrapper h2 {
+  font-size: 1.5rem;
 }
