--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,15 +1,22 @@
-@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-size: 16px;
-  font-family: "Oswald", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
+
+:root {
+  --tiffany: #81d8d0;
+  --white: #fff;
+}
+
 body {
-  background-color: #81d8d0;
+  background-color: var(--tiffany);
   letter-spacing: 2px;
 }
+
 h1,
 h2 {
   text-transform: uppercase;
@@ -32,7 +39,7 @@ label {
 
 .wrapper-login {
   text-align: center;
-  background-color: white;
+  background-color: var(--white);
   width: 25%;
   position: absolute;
   top: 50%;
@@ -46,7 +53,7 @@ label {
 }
 .my-form-group label {
   display: block;
-  color: #81d8d0;
+  color: var(--tiffany);
   font-weight: bold;
 }
 .my-form-group input,
@@ -54,23 +61,34 @@ label {
 .my-form-group button {
   width: 80%;
   height: 2rem;
-  border: 1px solid #81d8d0;
-  margin: 0.5rem;
+  border: 1px solid var(--tiffany);
   border-radius: 1rem;
   letter-spacing: 2px;
   outline: none;
 }
+
+.my-form-group textarea {
+  border: 1px solid var(--tiffany);
+  padding: 0.2rem;
+  border-radius: 1rem;
+  outline: none;
+}
+
+.my-form-group input {
+  padding-left: 1rem;
+}
+
 .my-form-group button {
   text-transform: uppercase;
-  background-color: #81d8d0;
-  color: white;
+  background-color: var(--tiffany);
+  color: var(--white);
   font-weight: bold;
   cursor: pointer;
 }
 
 .my-form-group button:hover {
-  background-color: white;
-  color: #81d8d0;
+  background-color: var(--white);
+  color: var(--tiffany);
 }
 
 .wrapper-account {
@@ -80,38 +98,59 @@ label {
   padding: 1rem 0;
 }
 #userName {
-  color: white;
-  font-size: 1.4rem;
-  text-decoration: underline;
+  color: var(--tiffany);
+  background-color: var(--white);
+  font-size: 1.3rem;
+  padding: 0 1rem;
+}
+#userAvatar {
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 50%;
+  margin-right: 0.3rem;
+  border: 4px solid var(--white);
+}
+.avatarAndName-wrapper {
+  display: flex;
+  align-items: center;
 }
 .navList {
   display: flex;
   justify-content: center;
-  background-color: white;
+  background-color: var(--white);
   border-radius: 1rem;
 }
 .navList li {
   padding: 0.5rem 5rem;
   font-size: 1.2rem;
   text-transform: uppercase;
-  color: #81d8d0;
+  color: var(--tiffany);
   font-weight: bold;
   letter-spacing: 2px;
   cursor: pointer;
 }
 
 .navList li:hover {
-  background-color: #81d8d0;
-  color: white;
+  background-color: var(--tiffany);
+  color: var(--white);
   transition: ease-in-out 0.4s;
 }
-
+#tableBodyWorklog .custom-btn {
+  width: 100%;
+  margin: 0.2rem 0;
+}
+#tableBody td a {
+  background-color: var(--tiffany);
+  color: var(--white);
+  padding: 0.2rem;
+  border-radius: 1rem;
+}
 .custom-btn {
   padding: 0.3rem 1rem;
   font-weight: bold;
-  background-color: white;
-  color: #81d8d0;
-  border: 1px solid #81d8d0;
+  background-color: var(--white);
+  color: var(--tiffany);
+  border: 1px solid var(--tiffany);
   text-transform: uppercase;
   cursor: pointer;
   border-radius: 1rem;
@@ -132,7 +171,7 @@ label {
 .search-email input {
   width: 40%;
   height: 2rem;
-  border: 1px solid #81d8d0;
+  border: 1px solid var(--tiffany);
   margin: 0.5rem;
   border-radius: 1rem;
   letter-spacing: 2px;
@@ -147,20 +186,27 @@ table {
   width: 100%;
   margin: 2rem 0;
   text-align: center;
-  background-color: white;
-  color: #81d8d0;
+  background-color: var(--white);
+  font-weight: 600;
+  color: var(--tiffany);
   border-radius: 1rem;
   padding: 0.5rem;
 }
 thead {
-  background-color: #81d8d0;
-  color: white;
+  background-color: var(--tiffany);
+  color: var(--white);
   border-radius: 1rem;
 }
 thead th {
-  font-size: 1.3rem;
+  font-size: 1rem;
   border-radius: 1rem;
-  width: 11%;
+  line-height: 1;
+  padding: 0.3rem 1rem;
+  text-transform: uppercase;
+}
+
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 
 .overlay {
@@ -178,9 +224,9 @@ thead th {
   margin: 5% auto;
   border-radius: 1rem;
   padding: 2.5rem;
-  color: #81d8d0;
+  color: var(--tiffany);
   text-align: center;
-  background-color: white;
+  background-color: var(--white);
 }
 .answers {
   display: flex;
@@ -191,8 +237,8 @@ thead th {
   margin-right: 1rem;
 }
 .answers #noBtn {
-  color: white;
-  background-color: #81d8d0;
+  color: var(--white);
+  background-color: var(--tiffany);
 }
 
 .exit-wrapper {
@@ -200,8 +246,8 @@ thead th {
   justify-content: end;
 }
 .exit-wrapper button {
-  color: white;
-  background-color: #81d8d0;
+  color: var(--white);
+  background-color: var(--tiffany);
 }
 .image-wrapper img {
   width: 100%;
@@ -220,14 +266,17 @@ thead th {
 .strong {
   font-weight: bold;
   font-size: 1.3rem;
-  text-decoration: underline;
+  color: var(--white);
+  background-color: var(--tiffany);
+  padding: 0.3rem;
+  border-radius: 1rem;
 }
 #worklogPage h2 {
   font-size: 1.5rem;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid var(--white);
   display: inline-block;
   margin: 2rem 0;
-  color: white;
+  color: var(--white);
 }
 #worklogPage button {
   display: block;
@@ -238,4 +287,9 @@ thead th {
 .image-wrapper {
   width: 30%;
   margin-right: 2rem;
+}
+.warning {
+  color: crimson;
+  font-weight: 600;
+  font-size: 0.8rem;
 }
